# convergence-benchmark

./: .gitignore  pyproject.toml
.beads/: issues.jsonl
app/: index.html
app/src/: App.css  App.tsx  gameData.json  index.css  types.ts
app/src/components/: GameViewer.tsx
data/: sample_game.json
data/results/: claude-3-haiku-20240307_vs_claude-3-haiku-20240307_20251217_075723.json  claude-3-haiku-20240307_vs_claude-3-haiku-20240307_20251217_080732.json  gpt-5-mini_vs_gpt-5-mini_20251217_220234.json  haiku-4.5_vs_gpt-5-mini_20251217_215433.json  haiku-4.5_vs_gpt-5-mini_20251217_220105.json  haiku-4.5_vs_gpt-5-mini_20251217_220437.json  haiku_vs_gpt-mini_20251217_210232.json  haiku_vs_gpt-mini_20251217_211304.json  haiku_vs_gpt-mini_20251217_214549.json  haiku_vs_gpt-mini_20251217_214807.json  haiku_vs_haiku_20251217_215042.json
data/results/claude_4_5_suite/: claude_4_5_benchmark_20251217_083607.json  claude_4_5_benchmark_20251217_084349.json  claude_4_5_benchmark_20251217_091108.json  claude_4_5_benchmark_20251217_093422.json
scripts/: run_benchmark.py  run_claude_benchmark.py  test_single_game.py
src/convergence/: __init__.py  game.py  player.py  runner.py  wordlist.py
tests/: __init__.py  test_game.py  test_player.py  test_wordlist.py
