[project]
name = "convergence"
version = "0.1.0"
description = "A benchmark for evaluating LLM convergence in the Convergence word association game"
readme = "README.md"
authors = [
    { name = "Max Ghenis", email = "mghenis@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.50.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/convergence"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
